# conan-qsqlcipher

./: .gitattributes  CMakeLists.txt  README.md  conanfile.py
patches/: qsqlcipher.pro-5.15-3.patch
src/: qsql_sqlite.cpp  qsql_sqlite_p.h  smain.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
